[metadata]
name = seraphlabs-cairo-contracts
version = attr: seraphlabs-cairo-contracts.__version__
description = SeraphLabs library for starknet smart contract development written in Cairo
author = kahi.eth
author_email = kahi@seraphlabs.io
license = 
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/Seraph-Labs/Cairo-Contracts
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
openzeppelin = "*.cairo"

[options.extras_require]
testing =
    setuptools
    tox
    pytest